automatically backed up by learn

--- a/index.html
+++ b/index.html
@@ -1,2 +1,44 @@
-<!-- Write your HTML in this file -->
+<!doctype html> 
 
+<!--<ul>-->
+<!--  <li>Coffee</li>-->
+<!--  <li>Tea</li>-->
+<!--  <li>Milk</li>-->
+<!--</ul>-->
+
+<html>
+    <h3>www.food.com</h3>
+    <nav class="menu">
+      <ul>
+        <head>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">About</a></li>
+        <li><a href="#">Contact</a></li>
+      </head>
+      </ul>
+    </nav>
+  <body>
+    <header>
+  <ul>
+  <li>Coffee</li>
+  <li>Tea</li>
+  <li>Milk</li>
+</ul>
+</header>
+</body>
+    
+</html>
+
+
+
+<!--<html>-->
+<!--  <head>-->
+<!--    <nav>-->
+<!--      <h3>-->
+<!--        <title>-->
+<!--          title-->
+<!--        </title>-->
+<!--      </h3>-->
+<!--    </nav>-->
+<!--  </head>-->
+<!--</html>-->
